--- a/plugins/CoreHome/lang/es-ar.json
+++ b/plugins/CoreHome/lang/es-ar.json
@@ -105,6 +105,7 @@
         "ReportWithMetadata": "Informe con metadatos",
         "ReadMoreOnlineGuide": "Leé más sobre este tema en la guía en línea.",
         "SeeAvailableVersions": "Ver las versiones disponibles",
-        "QuickLinks": "Enlaces rápidos"
+        "QuickLinks": "Enlaces rápidos",
+        "SearchOnMatomo": "Buscá \"%1$s\" en matomo.org"
     }
 }
