--- a/plugins/Feedback/lang/id.json
+++ b/plugins/Feedback/lang/id.json
@@ -16,7 +16,6 @@
         "RemindMeLater": "Ingatkan saya nani",
         "NeverAskMeAgain": "Jangan tanyakan saya lagi",
         "HowCanWeHelp": "Bagaimana kami bisa membantu?",
-        "PurgeOldData": "Saya ingin menghapus beberapa data lama",
-        "SearchOnMatomo": "Cari '%1$s' pada Matomo.org"
+        "PurgeOldData": "Saya ingin menghapus beberapa data lama"
     }
 }
