--- a/plugins/Feedback/lang/zh-cn.json
+++ b/plugins/Feedback/lang/zh-cn.json
@@ -41,7 +41,6 @@
         "RemoveOtherLabel": "我想查看我的“其他”数据",
         "PurgeOldData": "我想删除一些旧数据",
         "SearchHelpResources": "搜索matomo.org帮助资源",
-        "PopularHelpTopics": "热门帮助主题",
-        "SearchOnMatomo": "在Matomo.org上搜索“ %1$s”"
+        "PopularHelpTopics": "热门帮助主题"
     }
 }
