--- a/plugins/Installation/lang/de.json
+++ b/plugins/Installation/lang/de.json
@@ -22,7 +22,7 @@
         "GoBackAndDefinePrefix": "Zurückgehen und einen Präfix für die Matomo-Tabellen definieren",
         "HappyAnalysing": "Viel Spaß beim Analysieren!",
         "Installation": "Installation",
-        "InformationalResults": "Informative Resultate",
+        "InformationalResults": "Informationen",
         "CopyBelowInfoForSupport": "Kopieren Sie die untenstehende Information oder laden Sie sie herunter für den Fall, dass unser Supportteam Sie danach fragen wird.",
         "CopySystemCheck": "Systemcheck kopieren",
         "DownloadSystemCheck": "Systemcheck herunterladen",
