--- a/plugins/PrivacyManager/lang/zh-tw.json
+++ b/plugins/PrivacyManager/lang/zh-tw.json
@@ -6,11 +6,17 @@
         "AnonymizeIpMaskLengtDescription": "選擇要隱藏多少字節的 IP 位址。",
         "AnonymizeIpMaskLength": "%1$s 字節，例如 %2$s",
         "AskingForConsent": "要求同意",
+        "ConsentExplanation": "「要求同意」意謂提供每個人關於他們的個人資料將會如何處理和控制的選項。",
         "ClickHereSettings": "點擊這裡查看 %s 設定。",
+        "WhenDoINeedConsent": "我該何時要求使用者同意？",
+        "HowDoIAskForConsent": "我該如何要求使用者同意？",
         "AnonymizeUserId": "以假名取代使用者 ID",
+        "AnonymizeProcessInfo": "此動作可能會需要很長一段時間，且不會立即完成。你可以在下方查看目前的進度。匿名化工作通常能在一小時內完成。",
+        "AnonymizeDataNow": "匿名化選中網站與時間的歷史資料",
         "CurrentDBSize": "目前資料庫大小",
         "DBPurged": "資料庫已清理。",
         "DeleteBothConfirm": "你將啟用原始資料刪除和報表刪除功能。這將永久刪除舊資料，你將無法再查看舊有分析資料。確定要繼續嗎？",
+        "DeleteDataDescription": "你可以設定讓 Matomo 定時刪除舊的原始資料和\/或處理過的報表，讓你的資料庫保持輕量，或符合 GDPR 等隱私規範。",
         "DeleteDataInterval": "刪除舊資料每隔",
         "DeleteOldVisitorLogs": "刪除舊的訪客記錄",
         "DeleteOldRawData": "定時刪除舊的原始資料",
@@ -57,14 +63,24 @@
         "ReportsDataSavedEstimate": "資料庫大小",
         "SaveSettingsBeforePurge": "你已變更了資料刪除的設定。請在開始清理前先保存設定。",
         "SeeAlsoOurOfficialGuidePrivacy": "也看看我們的官方指南：%1$s網頁分析隱私%2$s",
+        "TeaserHeader": "在此頁面中你可以透過自訂 Matomo 使其隱私與現有的法規相容，如：%1$s訪客 IP 匿名化%2$s、%3$s自動從資料庫中移除舊的訪客記錄%4$s和%5$s將之前追蹤的使用者資料匿名化%6$s。",
         "TeaserHeadline": "隱私設定",
         "UseAnonymizedIpForVisitEnrichment": "彙整訪問紀錄時也將 IP 匿名化。",
+        "UseAnonymizedIpForVisitEnrichmentNote": "像是 IP 地理位置供應商之類的外掛改善訪客的中繼資料。這些外掛預設使用匿名化的 IP 位址。如果你選擇「否」將會以原始的完整 IP 位址取代，結果呈現較無隱私但資料準確度更高。",
         "PseudonymizeUserIdNote": "當你啟用此選項，使用者 ID 將會被一組假名所取代來避免直接儲存或顯示個人可辨識的資訊像是 Email。在技術方面：給予你的使用者 ID，Matomo 將會使用加鹽的雜湊函數來處理使用者 ID 假名。",
         "PseudonymizeUserIdNote2": "注意：以假名取代不等於匿名化。在 GDPR 的條款中：使用者 ID 假名依舊認定為個人資料。如果某些附加資訊可用，原始的使用者 ID 依舊可以被辨識（只有 Matomo 和你的資料處理器可存取）。",
+        "AnonymizeOrderIdNote": "因為訂單 ID 可以與其他系統交叉使用，例如電子商務網站，訂單 ID 可能在 GDPR 中會被認定為個人資料。當你啟用這個選項，訂單 ID 將會自動被匿名化，所以不會記錄任何個人資訊。",
         "UseAnonymizeIp": "訪客 IP 匿名化",
         "UseAnonymizeTrackingData": "追蹤資料匿名化",
         "UseAnonymizeUserId": "使用者 ID 匿名化",
         "PseudonymizeUserId": "以假名取代使用者 ID",
+        "OptOutCustomize": "自訂選擇退出的 iframe",
+        "OptOutHtmlCode": "嵌入你的網站內用的 HTML 程式碼",
+        "OptOutPreview": "預覽你的網站上選擇退出的效果",
+        "FontColor": "字體顏色",
+        "FontSize": "字體大小",
+        "FontFamily": "字體名稱",
+        "BackgroundColor": "背景顏色",
         "UseAnonymizeOrderId": "訂單 ID 匿名化",
         "UseDeleteLog": "定時從資料庫中刪除舊的原始資料",
         "UseDeleteReports": "定時從資料庫中移除舊的報表",
