--- a/plugins/CoreHome/lang/it.json
+++ b/plugins/CoreHome/lang/it.json
@@ -106,6 +106,7 @@
         "ReportWithMetadata": "Report con metadati",
         "ReadMoreOnlineGuide": "Leggi altro su questo argomento nella guida online.",
         "SeeAvailableVersions": "Vedi le Versioni Disponibili",
-        "QuickLinks": "Link Rapidi"
+        "QuickLinks": "Link Rapidi",
+        "SearchOnMatomo": "Cerca '%1$s' su matomo.org"
     }
 }
