--- a/plugins/CoreUpdater/lang/zh-tw.json
+++ b/plugins/CoreUpdater/lang/zh-tw.json
@@ -7,6 +7,7 @@
         "DisablingIncompatiblePlugins": "停用不相容的插件：%s",
         "DownloadingUpdateFromX": "從 %s 下載更新中",
         "DownloadX": "下載 %s",
+        "UpdateLog": "更新歷程記錄",
         "EmptyDatabaseError": "資料庫 %s 是空的。你可能要編輯或移除你的 Matomo 設定檔。",
         "ErrorDIYHelp": "如果你是進階使用者而且在升級資料庫時發生錯誤：",
         "ErrorDIYHelp_1": "辨識並修正問題來源（例如 memory_limit 或 max_execution_time）",
@@ -91,6 +92,9 @@
         "YouMustDownloadPackageOrFixPermissions": "Matomo 無法覆寫你目前的安裝。你可以修改資料夾\/檔案權限，或是下載安裝包然後手動安裝版本 %s：",
         "YourDatabaseIsOutOfDate": "你的 Matomo 資料庫已經過期了，所以在繼續前必須先升級。",
         "ViewVersionChangelog": "查看此版本的更新紀錄：",
-        "ReceiveEmailBecauseIsSuperUser": "你會收到這封信件是因為你在 %s 的 Matomo 上是超級使用者。"
+        "ReceiveEmailBecauseIsSuperUser": "你會收到這封信件是因為你在 %s 的 Matomo 上是超級使用者。",
+        "ConvertToUtf8mb4": "轉換資料庫至 UTF8mb4 編碼",
+        "TriggerDatabaseConversion": "於背景觸發資料庫轉換",
+        "Utf8mb4ConversionHelp": "你的資料庫目前不是使用 UTF8mb4 編碼。這造成它無法儲存 4-byte 字元，例如表情符號、罕用亞洲文字、舊字體、或是數學符號...等。這些字元會被 %1$s 取代。<br \/><br \/>你的資料庫支援 UTF8mb4 編碼，且能轉換。<br \/><br \/>如果你能執行終端機指令，我們建議你執行此指令：%2$s<br \/><br \/>或者你可以在此啟動轉換工作。工作會在背景自動排程執行。<br \/><br \/>注意：根據資料庫容量，轉換資料庫可能會耗費數小時，此時追蹤功能將會暫時無法使用。我們不建議在大型網站資料上這麼做。<br \/><br \/>你可以在 %3$sFAQ%4$s 裡面找到更多相關資訊。"
     }
 }
