--- a/plugins/Feedback/lang/es-ar.json
+++ b/plugins/Feedback/lang/es-ar.json
@@ -41,7 +41,6 @@
         "RemoveOtherLabel": "Quiero ver los datos de mis \"Otros\"",
         "PurgeOldData": "Quiero quitar datos viejos",
         "SearchHelpResources": "Buscá los recursos de ayuda de matomo.org",
-        "PopularHelpTopics": "Temas populares de ayuda",
-        "SearchOnMatomo": "Buscá \"%1$s\" en matomo.org"
+        "PopularHelpTopics": "Temas populares de ayuda"
     }
 }
