--- a/plugins/Feedback/lang/sq.json
+++ b/plugins/Feedback/lang/sq.json
@@ -41,7 +41,6 @@
         "RemoveOtherLabel": "Dua të shoh të dhëna 'Të tjera' të miat",
         "PurgeOldData": "Dua të heq ca të dhëna të vjetra",
         "SearchHelpResources": "Kërkoni për burime ndihme te matomo.org",
-        "PopularHelpTopics": "Tema popullore ndihme",
-        "SearchOnMatomo": "Kërkoni për '%1$s' te Matomo.org"
+        "PopularHelpTopics": "Tema popullore ndihme"
     }
 }
