--- a/plugins/Live/lang/zh-tw.json
+++ b/plugins/Live/lang/zh-tw.json
@@ -36,6 +36,7 @@
         "ToggleActions": "切換所有活動的顯示狀態",
         "TopVisitedPages": "熱門訪問網頁",
         "VisitsLog": "訪客紀錄",
+        "QueryMaxExecutionTimeExceeded": "查詢花了太久時間。",
         "VisitorLog": "訪客紀錄",
         "VisitorLogDocumentation": "這個表格顯示所選擇的時間範圍中最新的訪問。你可以將滑鼠移過訪問日期查看訪客最後訪問為何時。%1$s如果日期範圍包含今日，你就可以即時查看訪客！%2$s這裡顯示的資料不論是否和多常使用彙整工作排程，永遠是即時的。",
         "VisitorLogNoDataMessagePurged": "看起來資料已經被清除，因為定期清理舊訪客紀錄已啟用而這份報表的日期已經久於 %s 日。超級使用者可以在管理中心 => 隱私中變更這個設定。",
