--- a/plugins/Login/lang/zh-tw.json
+++ b/plugins/Login/lang/zh-tw.json
@@ -16,14 +16,19 @@
         "SettingBruteForceEnableHelp": "暴力攻擊偵測是個重要的安全功能，來保護你的資料不被未經授權存取。它將只允許一定期間內特定次數的錯誤登入紀錄，而不讓使用者短時間內嘗試上千、上百萬遍密碼組合。如果在特定時間內發生太多錯誤登入紀錄，該使用者將在一定時間內無法登入。請注意 IP 一旦被封鎖，任何使用該 IP 的使用者將會被封鎖而無法正常登入。",
         "SettingBruteForceWhitelistIp": "不要封鎖這些 IP 登入",
         "SettingBruteForceBlacklistIp": "永遠封鎖這些 IP 登入",
+        "NotAllowListTakesPrecendence": "如果一 IP 同時出現在阻擋列表與允許列表，阻擋列表會先生效，因此 IP 會被阻擋。",
         "SettingBruteForceMaxFailedLogins": "指定時間內允許的登入嘗試次數",
         "SettingBruteForceMaxFailedLoginsHelp": "如果在下方指定的時間內登入錯誤次數達到這個數字，封鎖該 IP。",
         "SettingBruteForceTimeRange": "計算登入錯誤次數的時間範圍",
         "SettingBruteForceTimeRangeHelp": "輸入一個數字，單位為分鐘。",
+        "ConfirmPasswordReset": "重置密碼確認",
+        "ConfirmPasswordResetIntro": "為了確保真的是你要求變更密碼，請再次輸入你的新密碼。",
+        "ConfirmPasswordResetWrongPassword": "輸入的密碼不符合你的新密碼。若你忘記了你的新密碼，你可以再次重置你的密碼。若你沒有要求過變更密碼，則不用做任何事，你的密碼不會變更。",
         "LoginNotAllowedBecauseBlocked": "由於你登入失敗太多次，因此目前已不被允許登入，請稍後再試。",
         "CurrentlyBlockedIPs": "目前封鎖的 IP",
         "IPsAlwaysBlocked": "這些 IP 將永遠被封鎖",
         "UnblockAllIPs": "解除目前所有被封鎖的 IP",
+        "CurrentlyBlockedIPsUnblockInfo": "如果 IP 被誤封，你可以解除封鎖的 IP，讓他們能重新登入。",
         "CurrentlyBlockedIPsUnblockConfirm": "你確定要解除目前所有封鎖的 IP？",
         "LoginPasswordNotCorrect": "使用者名稱 & 密碼不正確。",
         "LostYourPassword": "密碼遺失了？",
@@ -35,6 +40,7 @@
         "PasswordChanged": "你的密碼已變更。",
         "PasswordRepeat": "密碼（再次輸入）",
         "PasswordsDoNotMatch": "密碼不相符。",
+        "PasswordResetAlreadySent": "你最近要求重設密碼太多次了。每個小時僅能要求重設一次。若你沒辦法重設你的密碼，請洽你的系統管理員協助。",
         "WrongPasswordEntered": "請輸入正確的密碼。",
         "ConfirmPasswordToContinue": "確認你的密碼以繼續",
         "PluginDescription": "提供使用者名稱與密碼驗證以及重設密碼功能。驗證方法可以透過使用市集中的其他登入外掛如 LoginLdap 來變更。",
