--- a/plugins/ScheduledReports/lang/en.json
+++ b/plugins/ScheduledReports/lang/en.json
@@ -38,6 +38,7 @@
         "Segment_Deletion_Error": "This segment cannot be deleted or made invisible to other users because it is used to generate email report(s) %s. Please retry after removing this segment from this report(s).",
         "Segment_Help": "You can select an existing custom segment to apply to data in this email report. You may create and edit custom segments in your dashboard %1$s(click here to open)%2$s, then click on the \"%3$s\" box, then \"%4$s\".",
         "SegmentAppliedToReports": "The segment '%s' is applied to the reports.",
+        "SegmentDeleted": "Segment deleted",
         "SendReportNow": "Send Report now",
         "SendReportTo": "Send report to",
         "SentToMe": "Send to me",
