--- a/plugins/PrivacyManager/lang/en.json
+++ b/plugins/PrivacyManager/lang/en.json
@@ -6,6 +6,8 @@
         "AnonymizeIpExtendedHelp": "When users visit your website, Matomo will not use the full IP address (such as %1$s) but instead Matomo will anonymize it first (to %2$s). IP address anonymisation is one of the requirements set by the privacy laws in some countries such as Germany.",
         "AnonymizeIpMaskLengtDescription": "Select how many bytes of the visitors' IPs should be masked.",
         "AnonymizeIpMaskLength": "%1$s byte(s) - e.g. %2$s",
+        "AnonymizeReferrer": "Anonymize Referrer",
+        "AnonymizeReferrerNote": "Matomo stores from which URL (referrer) a user comes to your site. In some cases such a URL may contain information that can be considered personal information. If you want to prevent such information to be tracked you can restrict the amount of referrer data that Matomo will store when a visitor enters your website. The more information is removed from the referrer information, the less likely personal information will be recorded. The more information you remove from the referrer, the less clear it will be how a visitor came to your website.",
         "AskingForConsent": "Asking for consent",
         "ConsentExplanation": "Consent means offering individuals choice and control about how their personal data is processed.",
         "ClickHereSettings": "Click here to access the %s settings.",
@@ -17,6 +19,10 @@
         "AnonymizeSites": "Anonymize the data of this site(s)",
         "AnonymizeRowDataFrom": "Anonymize all raw data starting from:",
         "AnonymizeRowDataTo": "Anonymize all raw data up to:",
+        "AnonymizeReferrerExcludeNone": "Don't anonymize the referrer",
+        "AnonymizeReferrerExcludeQuery": "Remove query parameters from referrer URL",
+        "AnonymizeReferrerExcludePath": "Keep only the domain of a referrer URL",
+        "AnonymizeReferrerExcludeAll": "Don't record the referrer URL but still detect the type of referrer",
         "AnonymizeIp": "Anonymize IP",
         "AnonymizeIpHelp": "This action cannot be undone. If enabled, for all visits during this duration the IP will be anonymized by at least 2 bytes, for example '192.168.xxx.xxx'. If you have currently configured to anonymize by 3 bytes, then this setting will be respected and all IPs will be anonymized by 3 bytes.",
         "AnonymizeLocation": "Anonymize Location",
@@ -60,6 +66,7 @@
         "DeleteReportsConfirm": "You are about to enable report data deletion. If old reports are removed, you will have to re-process them in order view them. Are you sure you want to do this?",
         "DeleteAggregateReportsDetailedInfo": "When you enable this setting, all aggregated reports will be deleted. Aggregated reports are generated from the raw data and represent aggregated data from several individual visits. For example, the \"Country\" report lists aggregated numbers to see how many visits you have gotten from each country.",
         "KeepBasicMetricsReportsDetailedInfo": "When you enable this setting, some numeric key performance indicators won't be deleted.",
+        "InfoSomeReferrerInfoMayBeAnonymized": "Some referrer information may be missing because referrer anonymisation is enabled as following: %s",
         "DeleteReportsInfo2": "If you delete old reports, they may be re-processed again from your RAW data when you request them.",
         "DeleteReportsInfo3": "If you have also enabled \"%s\", then the reports data you're deleting will be permanently lost.",
         "DeleteReportsOlderThan": "Delete reports older than",
